--- a/NDAT_GAME/Assembly-CSharp.csproj
+++ b/NDAT_GAME/Assembly-CSharp.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Assets\Scripts\camera.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Fonts\pinky_love_2\Readme!.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.23f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
