--- a/NDAT_GAME/Assembly-CSharp.csproj
+++ b/NDAT_GAME/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Assets\Scripts\coin.cs" />
     <Compile Include="Assets\Scripts\ButtonIslemleri.cs" />
     <Compile Include="Assets\Scripts\camera.cs" />
+    <Compile Include="Assets\Scripts\Enemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Fonts\pinky_love_2\Readme!.txt" />
